--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Version 1.1.3
+________________________________________________________________________________
+* Updating to PanViz 0.3.1
+
 Version 0.99.0
 ________________________________________________________________________________
 * Submission for Bioconductor
