--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Version 1.7.0
+________________________________________________________________________________
+* Fix a bug in creation of GO graph where invalid edges were included
+
 Version 1.1.3
 ________________________________________________________________________________
 * Updating to PanViz 0.3.1
